--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://arafinmridul.github.io/React-Blog-Application/",
   "name": "dojo-blog",
   "version": "0.1.0",
   "private": true,
